--- a/checkout.html
+++ b/checkout.html
@@ -17,21 +17,31 @@
   </header>
 
   <main class="container">
-    <h2>Revisão do Pedido</h2>
+    <h2>Finalizar Pedido</h2>
 
-    <div class="endereco-entrega">
-      <h3>Endereço de Entrega</h3>
-      <p id="enderecoText">Carregando endereço...</p>
-      <a href="cep.html">Alterar endereço</a>
-    </div>
+    <form id="checkoutForm">
+      <fieldset>
+        <legend>Dados para Nota Fiscal</legend>
 
-    <!-- Aqui podem entrar mais detalhes do pedido -->
+        <label for="nome">Nome Completo:</label><br />
+        <input type="text" id="nome" name="nome" required /><br />
 
-    <button id="finalizarBtn">Finalizar Compra</button>
+        <label for="cpf">CPF:</label><br />
+        <input type="text" id="cpf" name="cpf" maxlength="14" required /><br />
+      </fieldset>
+
+      <fieldset>
+        <legend>Endereço de Entrega</legend>
+        <p id="enderecoText">Carregando endereço...</p>
+        <a href="cep.html">Alterar endereço</a>
+      </fieldset>
+
+      <button type="submit">Finalizar Compra</button>
+    </form>
   </main>
 
   <script>
-    // Puxa o endereço salvo do localStorage e mostra na página
+    // Mostrar endereço salvo
     function mostrarEndereco() {
       const cep = localStorage.getItem("cep") || "";
       const cidade = localStorage.getItem("cidade") || "";
@@ -40,7 +50,7 @@
       const bairro = localStorage.getItem("bairro") || "";
       const complemento = localStorage.getItem("complemento") || "";
 
-      if(cep && cidade && rua && numero && bairro) {
+      if (cep && cidade && rua && numero && bairro) {
         const enderecoCompleto = `${rua}, ${numero}${complemento ? ', ' + complemento : ''} - ${bairro}, ${cidade} - CEP: ${cep}`;
         document.getElementById("enderecoText").textContent = enderecoCompleto;
       } else {
@@ -50,9 +60,23 @@
 
     mostrarEndereco();
 
-    document.getElementById("finalizarBtn").addEventListener("click", () => {
-      alert("Compra finalizada com sucesso!");
-      // Aqui você pode limpar o carrinho, localStorage etc se quiser
+    // Quando o formulário for enviado, redireciona para o PIX
+    document.getElementById("checkoutForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      // Você pode pegar os dados do formulário e salvar ou validar aqui se quiser
+      const nome = document.getElementById("nome").value.trim();
+      const cpf = document.getElementById("cpf").value.trim();
+
+      if (!nome || !cpf) {
+        alert("Por favor, preencha todos os dados para a nota fiscal.");
+        return;
+      }
+
+      // Aqui pode salvar no localStorage ou enviar para backend, se tiver
+
+      // Redireciona para página do PIX
+      window.location.href = "pix.html";
     });
   </script>
 
