--- a/checkout.html
+++ b/checkout.html
@@ -2,83 +2,43 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finalizar Compra | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="checkout-page">
-
   <header>
-    <div class="header-content" style="background-color: #ffe600; padding: 12px 0; display: flex; justify-content: center;">
+    <div class="header-content">
       <a href="index.html">
-        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" style="height: 50px; cursor: pointer;" />
+        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
       </a>
     </div>
   </header>
 
   <main class="container">
-    <h2>Finalizar Pedido</h2>
-
+    <h2>Dados para Nota Fiscal</h2>
     <form id="checkoutForm">
-      <fieldset>
-        <legend>Dados para Nota Fiscal</legend>
+      <label for="nome">Nome completo:</label>
+      <input type="text" id="nome" name="nome" required />
 
-        <label for="nome">Nome Completo:</label><br />
-        <input type="text" id="nome" name="nome" required /><br />
+      <label for="cpf">CPF:</label>
+      <input type="text" id="cpf" name="cpf" required />
 
-        <label for="cpf">CPF:</label><br />
-        <input type="text" id="cpf" name="cpf" maxlength="14" required /><br />
-      </fieldset>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
 
-      <fieldset>
-        <legend>Endereço de Entrega</legend>
-        <p id="enderecoText">Carregando endereço...</p>
-        <a href="cep.html">Alterar endereço</a>
-      </fieldset>
+      <label for="telefone">Telefone:</label>
+      <input type="tel" id="telefone" name="telefone" required />
 
-      <button type="submit">Finalizar Compra</button>
+      <button type="submit">Finalizar compra</button>
     </form>
   </main>
 
   <script>
-    // Mostrar endereço salvo
-    function mostrarEndereco() {
-      const cep = localStorage.getItem("cep") || "";
-      const cidade = localStorage.getItem("cidade") || "";
-      const rua = localStorage.getItem("rua") || "";
-      const numero = localStorage.getItem("numero") || "";
-      const bairro = localStorage.getItem("bairro") || "";
-      const complemento = localStorage.getItem("complemento") || "";
-
-      if (cep && cidade && rua && numero && bairro) {
-        const enderecoCompleto = `${rua}, ${numero}${complemento ? ', ' + complemento : ''} - ${bairro}, ${cidade} - CEP: ${cep}`;
-        document.getElementById("enderecoText").textContent = enderecoCompleto;
-      } else {
-        document.getElementById("enderecoText").textContent = "Nenhum endereço cadastrado.";
-      }
-    }
-
-    mostrarEndereco();
-
-    // Quando o formulário for enviado, redireciona para o PIX
-    document.getElementById("checkoutForm").addEventListener("submit", function(e) {
+    document.getElementById("checkoutForm").addEventListener("submit", function (e) {
       e.preventDefault();
-
-      // Você pode pegar os dados do formulário e salvar ou validar aqui se quiser
-      const nome = document.getElementById("nome").value.trim();
-      const cpf = document.getElementById("cpf").value.trim();
-
-      if (!nome || !cpf) {
-        alert("Por favor, preencha todos os dados para a nota fiscal.");
-        return;
-      }
-
-      // Aqui pode salvar no localStorage ou enviar para backend, se tiver
-
-      // Redireciona para página do PIX
       window.location.href = "pix.html";
     });
   </script>
-
 </body>
 </html>
