--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Finalizar Compra | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .checkout-container {
+      max-width: 500px;
+      margin: 30px auto;
+      background-color: #fff;
+      padding: 25px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .checkout-container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .checkout-container form label {
+      display: block;
+      margin: 12px 0 5px;
+      font-weight: bold;
+    }
+    .checkout-container form input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .checkout-container form button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
+      background-color: #3483fa;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .checkout-container form button:hover {
+      background-color: #2968c8;
+    }
+  </style>
 </head>
 <body class="checkout-page">
   <header>
@@ -16,22 +56,24 @@
   </header>
 
   <main class="container">
-    <h2>Dados para Nota Fiscal</h2>
-    <form id="checkoutForm">
-      <label for="nome">Nome completo:</label>
-      <input type="text" id="nome" name="nome" required />
+    <div class="checkout-container">
+      <h2>Dados para Nota Fiscal</h2>
+      <form id="checkoutForm">
+        <label for="nome">Nome completo:</label>
+        <input type="text" id="nome" name="nome" required />
 
-      <label for="cpf">CPF:</label>
-      <input type="text" id="cpf" name="cpf" required />
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" name="cpf" required />
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
 
-      <label for="telefone">Telefone:</label>
-      <input type="tel" id="telefone" name="telefone" required />
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" required />
 
-      <button type="submit">Finalizar compra</button>
-    </form>
+        <button type="submit">Finalizar compra</button>
+      </form>
+    </div>
   </main>
 
   <script>
