--- a/pix.html
+++ b/pix.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pagamento via PIX | LibreMerc</title>
+  <title>Pagamento via PIX | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     .pix-container {
