--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
   <div class="main-image">
     <img src="assets/produto-a.jpeg" alt="Galaxy A25" id="mainImage" />
   </div>
-  <div class="dot-indicators">
+  <div class="dots-carousel">
     <span class="dot active" onclick="trocarImagem(0)"></span>
     <span class="dot" onclick="trocarImagem(1)"></span>
     <span class="dot" onclick="trocarImagem(2)"></span>
