--- a/Index.html
+++ b/Index.html
@@ -57,9 +57,9 @@
     <img src="assets/produto-a.jpeg" alt="Galaxy A25" id="mainImage" />
   </div>
   <div class="dots-carousel">
-    <span class="dot active" onclick="trocarImagem(0)"></span>
-    <span class="dot" onclick="trocarImagem(1)"></span>
-    <span class="dot" onclick="trocarImagem(2)"></span>
+    <div class="dot active" onclick="trocarImagem(0)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(1)" role="button"></div>
+    <div class="dot" onclick="trocarImagem(2)" role="button"></div>
   </div>
 </section>
 
@@ -101,19 +101,21 @@
   </script>
   <script>
   const imagens = [
-  'assets/produto-a.jpeg',
-  'assets/produto-b.jpeg',
-  'assets/produto-c.jpeg'
-];
+    'assets/produto-a.jpeg',
+    'assets/produto-b.jpeg',
+    'assets/produto-c.jpeg'
+  ];
 
-function trocarImagem(index) {
-  document.getElementById('mainImage').src = imagens[index];
-  document.querySelectorAll('.dot').forEach(dot => dot.classList.remove('active'));
-  document.querySelectorAll('.dot')[index].classList.add('active');
-}
+  function trocarImagem(index) {
+    const mainImage = document.getElementById('mainImage');
+    mainImage.src = imagens[index];
 
+    const dots = document.querySelectorAll('.dot');
+    dots.forEach(dot => dot.classList.remove('active'));
+    dots[index].classList.add('active');
+  }
 
-  // Lightbox: clicar na imagem principal abre em tela cheia
+  // Lightbox para imagem
   document.getElementById('mainImage').addEventListener('click', function () {
     const imageSrc = this.src;
     const lightbox = document.createElement('div');
@@ -143,6 +145,7 @@ function trocarImagem(index) {
     });
   });
 </script>
+
 
 </body>
 </html>
