--- a/Index.html
+++ b/Index.html
@@ -100,7 +100,7 @@
     }
   </script>
   
-<script>
+  <script>
   const imagens = [
     'assets/produto-a.jpeg',
     'assets/produto-b.jpeg',
@@ -108,26 +108,70 @@
   ];
 
   let currentImageIndex = 0;
+  let startX = 0;
+
+  const mainImage = document.getElementById('mainImage');
 
   function trocarImagem(index) {
     const mainImage = document.getElementById('mainImage');
-    mainImage.src = imagens[index];
+    const lightboxImg = document.querySelector('#lightbox img');
+
+    mainImage.classList.add('fade-out');
+    if (lightboxImg) lightboxImg.classList.add('fade-out');
+
+    setTimeout(() => {
+      mainImage.src = imagens[index];
+      if (lightboxImg) lightboxImg.src = imagens[index];
+    }, 150);
+
+    setTimeout(() => {
+      mainImage.classList.remove('fade-out');
+      if (lightboxImg) lightboxImg.classList.remove('fade-out');
+    }, 300);
+
     currentImageIndex = index;
 
-    // Atualiza bolinhas
     const dots = document.querySelectorAll('.dot');
     dots.forEach(dot => dot.classList.remove('active'));
     if (dots[index]) dots[index].classList.add('active');
-
-    // Atualiza imagem ampliada se estiver aberta
-    const lightboxImg = document.querySelector('#lightbox img');
-    if (lightboxImg) {
-      lightboxImg.src = imagens[index];
-    }
   }
 
-  // Lightbox para imagem
-  document.getElementById('mainImage').addEventListener('click', function () {
+  // Swipe em dispositivos móveis
+  mainImage.addEventListener('touchstart', (e) => {
+    startX = e.touches[0].clientX;
+  });
+
+  mainImage.addEventListener('touchend', (e) => {
+    const endX = e.changedTouches[0].clientX;
+    handleSwipe(startX, endX);
+  });
+
+  // Swipe com mouse (opcional)
+  mainImage.addEventListener('mousedown', (e) => {
+    startX = e.clientX;
+  });
+
+  mainImage.addEventListener('mouseup', (e) => {
+    const endX = e.clientX;
+    handleSwipe(startX, endX);
+  });
+
+  function handleSwipe(startX, endX) {
+    const deltaX = startX - endX;
+    if (Math.abs(deltaX) < 50) return;
+
+    if (deltaX > 0) {
+      currentImageIndex = (currentImageIndex + 1) % imagens.length;
+    } else {
+      currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
+    }
+
+    trocarImagem(currentImageIndex);
+  }
+
+  // Lightbox com clique
+  mainImage.addEventListener('click', function () {
+    const imageSrc = this.src;
     const lightbox = document.createElement('div');
     lightbox.id = 'lightbox';
     lightbox.style.position = 'fixed';
@@ -142,11 +186,10 @@
     lightbox.style.zIndex = 1000;
 
     const img = document.createElement('img');
-    img.src = imagens[currentImageIndex];
+    img.src = imageSrc;
     img.style.maxWidth = '90%';
     img.style.maxHeight = '90%';
     img.style.borderRadius = '10px';
-    img.style.transition = 'transform 0.3s ease';
 
     lightbox.appendChild(img);
     document.body.appendChild(lightbox);
@@ -155,60 +198,17 @@
       document.body.removeChild(lightbox);
     });
 
-    // Adiciona swipe dentro do lightbox
-    let startX = 0;
-
+    // Swipe no lightbox também
     img.addEventListener('touchstart', (e) => {
       startX = e.touches[0].clientX;
     });
 
     img.addEventListener('touchend', (e) => {
       const endX = e.changedTouches[0].clientX;
-      const deltaX = startX - endX;
-
-      if (Math.abs(deltaX) < 50) return;
-
-      if (deltaX > 0) {
-        // Próxima imagem
-        currentImageIndex = (currentImageIndex + 1) % imagens.length;
-      } else {
-        // Imagem anterior
-        currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
-      }
-
-      trocarImagem(currentImageIndex);
+      handleSwipe(startX, endX);
     });
-  });
-
-  // Swipe fora do lightbox (na imagem principal)
-  let startX = 0;
-  const mainImage = document.getElementById('mainImage');
-
-  mainImage.addEventListener('touchstart', (e) => {
-    startX = e.touches[0].clientX;
-  });
-
-  mainImage.addEventListener('touchend', (e) => {
-    const endX = e.changedTouches[0].clientX;
-    const deltaX = startX - endX;
-
-    if (Math.abs(deltaX) < 50) return;
-
-    if (deltaX > 0) {
-      currentImageIndex = (currentImageIndex + 1) % imagens.length;
-    } else {
-      currentImageIndex = (currentImageIndex - 1 + imagens.length) % imagens.length;
-    }
-
-    trocarImagem(currentImageIndex);
-  });
-
-  // Clique nas bolinhas
-  document.querySelectorAll('.dot').forEach((dot, index) => {
-    dot.addEventListener('click', () => trocarImagem(index));
   });
 </script>
 
-  
 </body>
 </html>
