--- a/Index.html
+++ b/Index.html
@@ -113,27 +113,43 @@
   const mainImage = document.getElementById('mainImage');
 
   function trocarImagem(index) {
-    const lightboxImg = document.querySelector('#lightbox img');
+  const lightboxImg = document.querySelector('#lightbox img');
 
-    mainImage.classList.add('fade-out');
-    if (lightboxImg) lightboxImg.classList.add('fade-out');
+  // Remove fade-in se existir e aplica fade-out
+  mainImage.classList.remove('fade-in');
+  mainImage.classList.add('fade-out');
 
-    setTimeout(() => {
-      mainImage.src = imagens[index];
-      if (lightboxImg) lightboxImg.src = imagens[index];
-    }, 150);
-
-    mainImage.onload = () => mainImage.classList.remove('fade-out');
-    if (lightboxImg) {
-      lightboxImg.onload = () => lightboxImg.classList.remove('fade-out');
-    }
-
-    currentImageIndex = index;
-
-    const dots = document.querySelectorAll('.dot');
-    dots.forEach(dot => dot.classList.remove('active'));
-    if (dots[index]) dots[index].classList.add('active');
+  if (lightboxImg) {
+    lightboxImg.classList.remove('fade-in');
+    lightboxImg.classList.add('fade-out');
   }
+
+  // Troca a imagem após o fade-out
+  setTimeout(() => {
+    mainImage.src = imagens[index];
+    if (lightboxImg) lightboxImg.src = imagens[index];
+  }, 150);
+
+  // Ao carregar a nova imagem, aplica fade-in
+  mainImage.onload = () => {
+    mainImage.classList.remove('fade-out');
+    mainImage.classList.add('fade-in');
+  };
+
+  if (lightboxImg) {
+    lightboxImg.onload = () => {
+      lightboxImg.classList.remove('fade-out');
+      lightboxImg.classList.add('fade-in');
+    };
+  }
+
+  currentImageIndex = index;
+
+  const dots = document.querySelectorAll('.dot');
+  dots.forEach(dot => dot.classList.remove('active'));
+  if (dots[index]) dots[index].classList.add('active');
+  }
+    
 
   mainImage.addEventListener('touchstart', (e) => {
     startX = e.touches[0].clientX;
