--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
   </header>
 
   <section class="cep-bar" id="cep-info">
-    <a href="cep.html"><i class="fas fa-map-marker-alt"></i> Informe seu CEP</a>
+    <a href="cep.html" class="btn-cep"><i class="fas fa-map-marker-alt"></i> Informe seu CEP</a>
   </section>
 
   <main class="produto-container">
