--- a/cep.html
+++ b/cep.html
@@ -1,70 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Informe seu Endereço | Mercado Livre</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Informe seu Endereço | Mercado Livre</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="cep-page">
 
-  <header>
-    <div class="header-content" style="background-color: #ffe600; padding: 12px 0; display: flex; justify-content: center;">
-      <a href="index.html">
-        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" style="height: 50px; cursor: pointer;" />
-      </a>
-    </div>
-  </header>
+  <header>
+    <div class="header-content" style="background-color: #ffe600; padding: 12px 0; display: flex; justify-content: center;">
+      <a href="index.html">
+        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" style="height: 50px; cursor: pointer;" />
+      </a>
+    </div>
+  </header>
 
-  <main class="container">
+  <main class="container">
+    <div class="cep-container">
+      <h2>Informe seu endereço para entrega</h2>
+      <form id="cepForm">
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" required maxlength="9" placeholder="00000-000" />
 
-    <div class="cep-container">
-      <h2>Informe seu endereço para entrega</h2>
-      <form id="cepForm">
-        <label for="cep">CEP:</label>
-        <input type="text" id="cep" required />
+        <label for="cidade">Cidade:</label>
+        <input type="text" id="cidade" required />
 
-        <label for="cidade">Cidade:</label>
-        <input type="text" id="cidade" required />
+        <label for="rua">Rua:</label>
+        <input type="text" id="rua" required />
 
-        <label for="rua">Rua:</label>
-        <input type="text" id="rua" required />
+        <label for="numero">Número:</label>
+        <input type="text" id="numero" required />
 
-        <label for="numero">Número:</label>
-        <input type="text" id="numero" required />
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro" required />
 
-        <label for="bairro">Bairro:</label>
-        <input type="text" id="bairro" required />
+        <label for="complemento">Complemento:</label>
+        <input type="text" id="complemento" />
 
-        <label for="complemento">Complemento:</label>
-        <input type="text" id="complemento" />
+        <button type="submit">Salvar endereço</button>
+      </form>
+    </div>
+  </main>
 
-        <button type="submit">Salvar endereço</button>
-      </form>
-    </div>
+  <script>
+    document.getElementById("cep").addEventListener("blur", function () {
+      const cep = this.value.replace(/\D/g, '');
+      if (cep.length !== 8) return;
 
-  </main>
+      fetch(`https://viacep.com.br/ws/${cep}/json/`)
+        .then(response => response.json())
+        .then(data => {
+          if (data.erro) {
+            alert("CEP não encontrado!");
+            return;
+          }
 
-  <script>
-    document.getElementById("cepForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const cep = document.getElementById("cep").value;
-      const cidade = document.getElementById("cidade").value;
-      const rua = document.getElementById("rua").value;
-      const numero = document.getElementById("numero").value;
-      const bairro = document.getElementById("bairro").value;
-      const complemento = document.getElementById("complemento").value;
+          document.getElementById("cidade").value = data.localidade;
+          document.getElementById("rua").value = data.logradouro;
+          document.getElementById("bairro").value = data.bairro;
+        })
+        .catch(() => {
+          alert("Erro ao buscar o CEP. Tente novamente.");
+        });
+    });
 
-      localStorage.setItem("cep", cep);
-      localStorage.setItem("cidade", cidade);
-      localStorage.setItem("rua", rua);
-      localStorage.setItem("numero", numero);
-      localStorage.setItem("bairro", bairro);
-      localStorage.setItem("complemento", complemento);
+    document.getElementById("cepForm").addEventListener("submit", function (e) {
+      e.preventDefault();
 
-      window.location.href = "index.html";
-    });
-  </script>
+      const cep = document.getElementById("cep").value;
+      const cidade = document.getElementById("cidade").value;
+      const rua = document.getElementById("rua").value;
+      const numero = document.getElementById("numero").value;
+      const bairro = document.getElementById("bairro").value;
+      const complemento = document.getElementById("complemento").value;
+
+      localStorage.setItem("cep", cep);
+      localStorage.setItem("cidade", cidade);
+      localStorage.setItem("rua", rua);
+      localStorage.setItem("numero", numero);
+      localStorage.setItem("bairro", bairro);
+      localStorage.setItem("complemento", complemento);
+
+      window.location.href = "index.html";
+    });
+  </script>
 
 </body>
 </html>
