--- a/cep.html
+++ b/cep.html
@@ -9,44 +9,38 @@
 <body class="cep-page">
 
   <header>
-    <div class="header-content" style="background-color: #ffe600; padding: 12px 0; display: flex; justify-content: center;">
-      <a href="index.html">
-        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" style="height: 50px; cursor: pointer;" />
-      </a>
-    </div>
+    <a href="index.html">
+      <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
+    </a>
   </header>
 
-  <main class="container">
+  <div class="cep-container">
+    <h2>Informe seu endereço para entrega</h2>
+    <form id="cepForm">
+      <label for="cep">CEP:</label>
+      <input type="text" id="cep" required />
 
-    <div class="cep-container">
-      <h2>Informe seu endereço para entrega</h2>
-      <form id="cepForm">
-        <label for="cep">CEP:</label>
-        <input type="text" id="cep" required />
+      <label for="cidade">Cidade:</label>
+      <input type="text" id="cidade" required />
 
-        <label for="cidade">Cidade:</label>
-        <input type="text" id="cidade" required />
+      <label for="estado">Estado (UF):</label>
+      <input type="text" id="estado" required />
 
-        <label for="estado">Estado (UF):</label>
-        <input type="text" id="estado" required />
+      <label for="rua">Rua:</label>
+      <input type="text" id="rua" required />
 
-        <label for="rua">Rua:</label>
-        <input type="text" id="rua" required />
+      <label for="numero">Número:</label>
+      <input type="text" id="numero" required />
 
-        <label for="numero">Número:</label>
-        <input type="text" id="numero" required />
+      <label for="bairro">Bairro:</label>
+      <input type="text" id="bairro" required />
 
-        <label for="bairro">Bairro:</label>
-        <input type="text" id="bairro" required />
+      <label for="complemento">Complemento:</label>
+      <input type="text" id="complemento" />
 
-        <label for="complemento">Complemento:</label>
-        <input type="text" id="complemento" />
-
-        <button type="submit">Salvar endereço</button>
-      </form>
-    </div>
-
-  </main>
+      <button type="submit">Salvar endereço</button>
+    </form>
+  </div>
 
   <script>
     document.getElementById("cep").addEventListener("blur", async () => {
