--- a/checkout.html
+++ b/checkout.html
@@ -2,85 +2,157 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Finalizar Compra | Mercado Livre</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    .checkout-container {
-      max-width: 500px;
-      margin: 30px auto;
-      background-color: #fff;
-      padding: 25px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .popup-confirmacao {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.6);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
     }
-    .checkout-container h2 {
+
+    .popup-box {
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      max-width: 400px;
+      width: 90%;
       text-align: center;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+
+    .popup-box h2 {
       margin-bottom: 20px;
       color: #333;
     }
-    .checkout-container form label {
-      display: block;
-      margin: 12px 0 5px;
-      font-weight: bold;
+
+    .popup-dados {
+      text-align: left;
+      font-size: 14px;
+      color: #444;
+      margin-bottom: 20px;
     }
-    .checkout-container form input {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .checkout-container form button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 20px;
-      background-color: #3483fa;
-      color: white;
+
+    .popup-botoes button {
+      padding: 12px 20px;
+      margin: 5px;
       border: none;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 6px;
+      font-weight: bold;
       cursor: pointer;
     }
-    .checkout-container form button:hover {
-      background-color: #2968c8;
+
+    .btn-cancelar {
+      background: #ccc;
+    }
+
+    .btn-confirmar {
+      background: #3483fa;
+      color: #fff;
+    }
+
+    .erro {
+      color: red;
+      font-size: 12px;
+      margin-top: 5px;
     }
   </style>
 </head>
 <body class="checkout-page">
+
   <header>
-    <div class="header-content">
-      <a href="index.html">
-        <img src="assets/logo-1.png" alt="Logo LibreMerc" class="logo" />
-      </a>
-    </div>
+    <a href="index.html"><img src="assets/logo-1.png" alt="Logo" class="logo" /></a>
   </header>
 
   <main class="container">
-    <div class="checkout-container">
-      <h2>Dados para Nota Fiscal</h2>
-      <form id="checkoutForm">
-        <label for="nome">Nome completo:</label>
-        <input type="text" id="nome" name="nome" required />
+    <h2>Finalize sua compra</h2>
+    <form id="checkoutForm">
+      <label for="nome">Nome completo:</label>
+      <input type="text" id="nome" required />
 
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" required />
+      <label for="cpf">CPF:</label>
+      <input type="text" id="cpf" required placeholder="000.000.000-00" />
+      <div id="erro-cpf" class="erro"></div>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" required />
 
-        <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" required />
-
-        <button type="submit">Finalizar compra</button>
-      </form>
-    </div>
+      <button type="submit">Finalizar compra</button>
+    </form>
   </main>
 
+  <!-- POPUP -->
+  <div class="popup-confirmacao" id="popup">
+    <div class="popup-box">
+      <h2>Confirme seus dados</h2>
+      <div class="popup-dados" id="dadosResumo"></div>
+      <div class="popup-botoes">
+        <button class="btn-cancelar" onclick="fecharPopup()">Cancelar</button>
+        <button class="btn-confirmar" onclick="confirmarCompra()">Confirmar</button>
+      </div>
+    </div>
+  </div>
+
   <script>
-    document.getElementById("checkoutForm").addEventListener("submit", function (e) {
+    // CPF real validation
+    function validarCPF(cpf) {
+      cpf = cpf.replace(/[^\d]+/g, '');
+      if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) return false;
+
+      let soma = 0;
+      for (let i = 0; i < 9; i++) soma += parseInt(cpf.charAt(i)) * (10 - i);
+      let resto = 11 - (soma % 11);
+      if (resto === 10 || resto === 11) resto = 0;
+      if (resto !== parseInt(cpf.charAt(9))) return false;
+
+      soma = 0;
+      for (let i = 0; i < 10; i++) soma += parseInt(cpf.charAt(i)) * (11 - i);
+      resto = 11 - (soma % 11);
+      if (resto === 10 || resto === 11) resto = 0;
+      if (resto !== parseInt(cpf.charAt(10))) return false;
+
+      return true;
+    }
+
+    // SUBMIT
+    document.getElementById("checkoutForm").addEventListener("submit", function(e) {
       e.preventDefault();
-      window.location.href = "pix.html";
+
+      const nome = document.getElementById("nome").value;
+      const cpf = document.getElementById("cpf").value;
+      const email = document.getElementById("email").value;
+
+      if (!validarCPF(cpf)) {
+        document.getElementById("erro-cpf").textContent = "CPF inválido. Verifique e tente novamente.";
+        return;
+      } else {
+        document.getElementById("erro-cpf").textContent = "";
+      }
+
+      // Monta o pop-up
+      const resumo = `
+        <strong>Nome:</strong> ${nome}<br>
+        <strong>CPF:</strong> ${cpf}<br>
+        <strong>Email:</strong> ${email}
+      `;
+      document.getElementById("dadosResumo").innerHTML = resumo;
+      document.getElementById("popup").style.display = "flex";
     });
+
+    function fecharPopup() {
+      document.getElementById("popup").style.display = "none";
+    }
+
+    function confirmarCompra() {
+      window.location.href = "pagamento.html";
+    }
   </script>
+
 </body>
 </html>
