--- a/checkout.html
+++ b/checkout.html
@@ -150,7 +150,7 @@
     }
 
     function confirmarCompra() {
-      window.location.href = "pagamento.html";
+      window.location.href = "pix.html";
     }
   </script>
 
