--- a/checkout.html
+++ b/checkout.html
@@ -21,7 +21,7 @@
       background: white;
       border-radius: 12px;
       padding: 30px;
-      max-width: 400px;
+      max-width: 420px;
       width: 90%;
       text-align: center;
       box-shadow: 0 0 15px rgba(0,0,0,0.3);
@@ -37,6 +37,7 @@
       font-size: 14px;
       color: #444;
       margin-bottom: 20px;
+      line-height: 1.6;
     }
 
     .popup-botoes button {
@@ -80,6 +81,9 @@
       <input type="text" id="cpf" required placeholder="000.000.000-00" />
       <div id="erro-cpf" class="erro"></div>
 
+      <label for="telefone">Telefone:</label>
+      <input type="tel" id="telefone" required placeholder="(99) 99999-9999" />
+
       <label for="email">E-mail:</label>
       <input type="email" id="email" required />
 
@@ -100,7 +104,6 @@
   </div>
 
   <script>
-    // CPF real validation
     function validarCPF(cpf) {
       cpf = cpf.replace(/[^\d]+/g, '');
       if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) return false;
@@ -120,12 +123,12 @@
       return true;
     }
 
-    // SUBMIT
     document.getElementById("checkoutForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
       const nome = document.getElementById("nome").value;
       const cpf = document.getElementById("cpf").value;
+      const telefone = document.getElementById("telefone").value;
       const email = document.getElementById("email").value;
 
       if (!validarCPF(cpf)) {
@@ -135,12 +138,28 @@
         document.getElementById("erro-cpf").textContent = "";
       }
 
-      // Monta o pop-up
+      // Recuperar endereço do localStorage
+      const endereco = {
+        cep: localStorage.getItem("cep") || "-",
+        rua: localStorage.getItem("rua") || "-",
+        numero: localStorage.getItem("numero") || "-",
+        bairro: localStorage.getItem("bairro") || "-",
+        cidade: localStorage.getItem("cidade") || "-",
+        estado: localStorage.getItem("estado") || "-",
+        complemento: localStorage.getItem("complemento") || ""
+      };
+
       const resumo = `
         <strong>Nome:</strong> ${nome}<br>
         <strong>CPF:</strong> ${cpf}<br>
-        <strong>Email:</strong> ${email}
+        <strong>Telefone:</strong> ${telefone}<br>
+        <strong>Email:</strong> ${email}<br><br>
+        <strong>Endereço:</strong><br>
+        ${endereco.rua}, ${endereco.numero} ${endereco.complemento ? '- ' + endereco.complemento : ''}<br>
+        ${endereco.bairro} - ${endereco.cidade}/${endereco.estado}<br>
+        CEP: ${endereco.cep}
       `;
+
       document.getElementById("dadosResumo").innerHTML = resumo;
       document.getElementById("popup").style.display = "flex";
     });
