--- a/pix.html
+++ b/pix.html
@@ -74,7 +74,7 @@
     <div class="cronometro" id="cronometro">05:00</div>
 
     <div class="qr-code">
-      <img src="assets/qrcode.png" alt="QR Code Pix" style="width: 100%; height: 100%;">
+      <img src="assets/qrcode-pix.png" alt="QR Code Pix" style="width: 100%; height: 100%;">
     </div>
 
     <p>Ou copie o código abaixo para colar no app do seu banco:</p>
