--- a/pix.html
+++ b/pix.html
@@ -84,12 +84,16 @@
 
     <button class="btn-copiar" id="copiarBtn" onclick="copiarCodigoPix()">Copiar código Pix</button>
 
-    <ul class="instrucoes">
-      <li>🏦 Abra o app do seu banco ou carteira digital</li>
-      <li>📋 Escolha a opção "Pix Copia e Cola"</li>
-      <li>🔗 Cole o código que você copiou acima</li>
-      <li>✅ Confirme o pagamento</li>
-    </ul>
+    <div class="instrucoes">
+  <h3>🧾 Como pagar com o Pix?</h3>
+  <ul>
+    <li>🏦 <strong>Abra o app</strong> do seu banco ou carteira digital</li>
+    <li>📋 Vá em <strong>Pix Copia e Cola</strong></li>
+    <li>🔗 <strong>Cole o código</strong> que você copiou acima</li>
+    <li>✅ <strong>Confirme o pagamento</strong> para finalizar sua compra</li>
+  </ul>
+</div>
+
   </main>
 
   <script>
