--- a/pix.html
+++ b/pix.html
@@ -77,21 +77,22 @@
       <img src="assets/qrcode-pix.png" alt="QR Code Pix" style="width: 100%; height: 100%;">
     </div>
 
-    <p>Ou copie o código abaixo para colar no app do seu banco:</p>
-    <div class="pix-codigo" id="codigoPix">
-      00020126480014br.gov.bcb.pix0114+5588999999995204000053039865405100.005802BR5925LibreMerc Pagamentos6010Sao Paulo62070503***6304A1B2
-    </div>
+    <div class="pix-codigo-container">
+  <label for="pixCode">Código Pix Copia e Cola:</label>
+  <div class="pix-codigo-box">
+    <input type="text" id="pixCode" readonly value="00020126760014br.gov.bcb.pix0114..." />
+    <button id="copiarBtn">Copiar</button>
+  </div>
+</div>
 
-    <button class="btn-copiar" id="copiarBtn" onclick="copiarCodigoPix()">Copiar código Pix</button>
-
-    <div class="instrucoes">
-  <h3>🧾 Como pagar com o Pix?</h3>
-  <ul>
-    <li>🏦 <strong>Abra o app</strong> do seu banco ou carteira digital</li>
-    <li>📋 Vá em <strong>Pix Copia e Cola</strong></li>
-    <li>🔗 <strong>Cole o código</strong> que você copiou acima</li>
-    <li>✅ <strong>Confirme o pagamento</strong> para finalizar sua compra</li>
-  </ul>
+<div class="pix-instrucoes">
+  <h3>Como pagar com Pix:</h3>
+  <ol>
+    <li>Abra o app do seu banco ou carteira digital</li>
+    <li>Escolha a opção <strong>Pix Copia e Cola</strong></li>
+    <li>Cole o código acima</li>
+    <li>Confirme o pagamento</li>
+  </ol>
 </div>
 
   </main>
