--- a/pix.html
+++ b/pix.html
@@ -86,7 +86,11 @@
 </div>
 
 <div class="pix-instrucoes">
-  <h3>Como pagar com Pix:</h3>
+  <h3>
+  <img src="assets/pix-logo.svg" alt="Pix" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 8px;">
+  Como pagar com Pix:
+</h3>
+
   <ol>
     <li>Abra o app do seu banco ou carteira digital</li>
     <li>Escolha a opção <strong>Pix Copia e Cola</strong></li>
