--- a/pix.html
+++ b/pix.html
@@ -87,7 +87,7 @@
 
 <div class="pix-instrucoes">
   <h3>
-  <img src="assets/pix-logo.svg" alt="Pix" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 8px;">
+  <img src="assets/pix-logo.png" alt="Pix" style="width: 24px; height: 24px; vertical-align: middle; margin-right: 8px;">
   Como pagar com Pix:
 </h3>
 
