--- a/cep.html
+++ b/cep.html
@@ -14,35 +14,40 @@
     </a>
   </header>
 
-  <div class="cep-container">
-    <h2>Informe seu endereço para entrega</h2>
-    <form id="cepForm">
-      <label for="cep">CEP:</label>
-      <input type="text" id="cep" required />
+  <main class="container">
+    <div class="cep-container">
+      <h2>Informe seu endereço para entrega</h2>
+      <form id="cepForm">
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" required />
 
-      <label for="cidade">Cidade:</label>
-      <input type="text" id="cidade" required />
+        <label for="cidade">Cidade:</label>
+        <input type="text" id="cidade" required />
 
-      <label for="estado">Estado (UF):</label>
-      <input type="text" id="estado" required />
+        <label for="estado">Estado (UF):</label>
+        <input type="text" id="estado" required />
 
-      <label for="rua">Rua:</label>
-      <input type="text" id="rua" required />
+        <label for="rua">Rua:</label>
+        <input type="text" id="rua" required />
 
-      <label for="numero">Número:</label>
-      <input type="text" id="numero" required />
+        <label for="numero">Número:</label>
+        <input type="text" id="numero" required />
 
-      <label for="bairro">Bairro:</label>
-      <input type="text" id="bairro" required />
+        <label for="bairro">Bairro:</label>
+        <input type="text" id="bairro" required />
 
-      <label for="complemento">Complemento:</label>
-      <input type="text" id="complemento" />
+        <label for="complemento">Complemento:</label>
+        <input type="text" id="complemento" />
 
-      <button type="submit">Salvar endereço</button>
-    </form>
-  </div>
+        <button type="submit">Salvar endereço</button>
+      </form>
+    </div>
+  </main>
 
   <script>
+    const params = new URLSearchParams(window.location.search);
+    const cameFromCheckout = params.get("from") === "checkout";
+
     document.getElementById("cep").addEventListener("blur", async () => {
       const cep = document.getElementById("cep").value.replace(/\D/g, "");
       if (cep.length !== 8) return;
@@ -65,7 +70,12 @@
       e.preventDefault();
       const campos = ["cep", "cidade", "estado", "rua", "numero", "bairro", "complemento"];
       campos.forEach(id => localStorage.setItem(id, document.getElementById(id).value));
-      window.location.href = "index.html";
+
+      if (cameFromCheckout) {
+        window.location.href = "checkout.html?pop=true";
+      } else {
+        window.location.href = "index.html";
+      }
     });
   </script>
 
